# protein-ab-tools

./: .gitignore  README.md  conda-env.yaml  pyproject.toml  pytest.ini
src/protein-ab-tools/ab_analysis/: numbering.py
src/protein-tools/align/: sequence_align.py
src/protein_ab_tools/: __init__.py
src/protein_ab_tools/ab_analysis/: __init__.py  numbering.py
src/protein_ab_tools/align/: __init__.py  sequence_align.py
tests/: README.md  __init__.py  conftest.py  test_numbering.py  test_sequence_align.py
