[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-ab-tools"
version = "0.1.0"
authors = [{ name = "Seung-woo Seo", email = "sw32.seo@gmail.com" }]
description = "Tools for protein and antibody sequence analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["biopython"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
